# named-spl-mints

./: Anchor.toml
programs/named-spl-mints/: Cargo.toml
programs/named-spl-mints/src/: lib.rs
tests/: named-spl-mints.ts
