[package]
name = "named-spl-mints"
version = "0.1.1"
edition = "2018"
description = "program for generating spl token mints with verifiably unique names and name attribution"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "lib"]
name = "named_spl_mints"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"